syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.square";
option java_outer_classname = "SquareProto";
option objc_class_prefix = "SQP";

package com.example.grpc;

message SquareRequest {
    double requestValue = 1;
}

message SquareResponse {
    double responseValue = 1;
}

service SquareService {
    rpc getSquare(SquareRequest) returns (SquareResponse);
}